@@ -16,7 +16,6 @@
 
 Reglist armreglist[] =
 {
-	{"LINK",	REGOFF(link),		RINT|RRDONLY, 'X'},
 	{"TYPE",	REGOFF(type),		RINT|RRDONLY, 'X'},
 	{"PSR",		REGOFF(psr),		RINT|RRDONLY, 'X'},
 	{"PC",		PC,			RINT, 'X'},
@@ -50,12 +49,13 @@ Mach marm =
 	0,		/* fp register set size */
 	"PC",		/* name of PC */
 	"SP",		/* name of SP */
-	"R15",		/* name of link register */
+	"R14",		/* name of link register */
 	"setR12",	/* static base register name */
 	0,		/* static base register value */
 	0x1000,		/* page size */
 	0xC0000000,	/* kernel base */
-	0,		/* kernel text mask */
+	0xC0000000,		/* kernel text mask */
+	0x3FFFFFFF,	/* user stack top */
 	4,		/* quantization of pc */
 	4,		/* szaddr */
 	4,		/* szreg */
